--- a/src/main/resources/static/api.html
+++ b/src/main/resources/static/api.html
@@ -1,12 +1,292 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Boot</title>
+    <title>API UI</title>
+    <link rel="icon" type="image/png" href="webjars/springfox-swagger-ui/images/favicon-32x32.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="webjars/springfox-swagger-ui/images/favicon-16x16.png" sizes="16x16"/>
+    <link href='webjars/springfox-swagger-ui/css/typography.css' media='screen' rel='stylesheet' type='text/css'/>
+    <link href='webjars/springfox-swagger-ui/css/reset.css' media='screen' rel='stylesheet' type='text/css'/>
+    <link href='webjars/springfox-swagger-ui/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
+    <link href='webjars/springfox-swagger-ui/css/reset.css' media='print' rel='stylesheet' type='text/css'/>
+    <link href='webjars/springfox-swagger-ui/css/print.css' media='print' rel='stylesheet' type='text/css'/>
+
+    <style>
+        body {
+            background: #f0f0f0;
+        }
+        #login * {
+            box-sizing: border-box;
+        }
+        #login {
+            width: 400px;
+            padding: 20px 30px;
+            margin: 10% auto;
+            border-radius: 10px;
+            background: #fff;
+        }
+
+        #login H1 {
+            margin-bottom: 0px;
+            padding: 10px;
+        }
+
+        #login .tips {
+            color: red;
+            font-size: 12px;
+        }
+
+        #login .group {
+            padding: 15px 10px;
+        }
+        #login .group input {
+            width: 100%;
+            height: 35px;
+            line-height: 35px;
+            padding: 5px;
+            border-radius: 5px;
+            border: 1px solid #ebebeb;
+        }
+        #login .group button {
+            border-radius: 5px;
+            padding: 10px 15px;
+            background-color: #0bc2ff;
+            border: none;
+            color: #ffffff;
+            cursor: pointer;
+        }
+    </style>
+
+    <script src='webjars/springfox-swagger-ui/lib/object-assign-pollyfill.js' type='text/javascript'></script>
+    <script src='webjars/springfox-swagger-ui/lib/jquery-1.8.0.min.js' type='text/javascript'></script>
+    <script src='webjars/springfox-swagger-ui/lib/jquery.slideto.min.js' type='text/javascript'></script>
+    <script src='webjars/springfox-swagger-ui/lib/jquery.wiggle.min.js' type='text/javascript'></script>
+    <script src='webjars/springfox-swagger-ui/lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
+    <script src='webjars/springfox-swagger-ui/lib/handlebars-4.0.5.js' type='text/javascript'></script>
+    <script src='webjars/springfox-swagger-ui/lib/lodash.min.js' type='text/javascript'></script>
+    <script src='webjars/springfox-swagger-ui/lib/backbone-min.js' type='text/javascript'></script>
+    <script src='webjars/springfox-swagger-ui/swagger-ui.min.js' type='text/javascript'></script>
+    <script src='webjars/springfox-swagger-ui/lib/highlight.9.1.0.pack.js' type='text/javascript'></script>
+    <script src='webjars/springfox-swagger-ui/lib/highlight.9.1.0.pack_extended.js' type='text/javascript'></script>
+    <script src='webjars/springfox-swagger-ui/lib/jsoneditor.min.js' type='text/javascript'></script>
+    <script src='webjars/springfox-swagger-ui/lib/marked.js' type='text/javascript'></script>
+    <script src='webjars/springfox-swagger-ui/lib/swagger-oauth.js' type='text/javascript'></script>
+    <script src="js/jquery.base64.js"></script>
+    <script src="js/jquery.cookie.js"></script>
+    <script type="text/javascript">
+        $(function() {
+        var springfox = {
+            "baseUrl": function() {
+                var urlMatches = /(.*)\/api.html.*/.exec(window.location.href);
+                return urlMatches[1];
+            },
+            "restBaseUrl":function (){
+                return this.baseUrl();
+            },
+            "securityConfig": function(cb) {
+                $.getJSON(this.restBaseUrl() + "/swagger-resources/configuration/security", function(data) {
+                    cb(data);
+                });
+            },
+            "uiConfig": function(cb) {
+                $.getJSON(this.restBaseUrl() + "/swagger-resources/configuration/ui", function(data) {
+                    cb(data);
+                });
+            }
+        };
+
+
+            if (!$.cookie('token')) {
+                $('#content').hide();
+                $('#login').show();
+            } else {
+                $('#content').show();
+                $('#login').hide();
+                loadApi();
+            }
+
+            $('#submit').click(function () {
+                var userName = $("input[name='username']").val();
+                var password = $("input[name='password']").val();
+                doLogin({
+                  "userName": userName,
+                  "password": password
+                });
+
+            })
+            function doLogin(params){
+                $.ajax(springfox.restBaseUrl() + '/user/validate', {
+                    data: JSON.stringify(params),
+                    type: 'POST',
+                    contentType: 'application/json',
+                    success: function(response) {
+                        if (response) {
+                            $('#content').show();
+                            $('#login').hide();
+                            loadApi();
+                        } else {
+                            $('.tips').html('登录失败，请重新登录');
+                        }
+                    },
+                    error: function(e) {
+                        $('.tips').html('登录请求失败，请稍后再试');
+                    }
+                });
+            }
+
+
+
+            function loadApi () {
+
+                window.springfox = springfox;
+                window.oAuthRedirectUrl = springfox.baseUrl() + '/webjars/springfox-swagger-ui/o2c.html';
+
+                window.springfox.uiConfig(function(data) {
+                    window.swaggerUi = new SwaggerUi({
+                        dom_id: "swagger-ui-container",
+                        validatorUrl: data.validatorUrl,
+                        supportedSubmitMethods: data.supportedSubmitMethods || ['get', 'post', 'put', 'delete', 'patch'],
+                        docExpansion: data.docExpansion || 'none',
+                        jsonEditor: JSON.parse(data.jsonEditor) || false,
+                        apisSorter: data.apisSorter || 'alpha',
+                        defaultModelRendering: data.defaultModelRendering || 'schema',
+                        showRequestHeaders: data.showRequestHeaders || true,
+                        timeout: data.requestTimeout,
+                        onComplete: function(swaggerApi, swaggerUi) {
+
+                            initializeSpringfox();
+
+                            if (window.SwaggerTranslator) {
+                                window.SwaggerTranslator.translate();
+                            }
+
+                            $('pre code').each(function(i, e) {
+                                hljs.highlightBlock(e)
+                            });
+
+                        },
+                        onFailure: function(data) {
+                            log("Unable to Load SwaggerUI");
+                        },
+                    });
+
+                    initializeBaseUrl();
+
+                    function addApiKeyAuthorization(security) {
+                        var apiKeyVehicle = security.apiKeyVehicle || 'query';
+                        var apiKeyName = security.apiKeyName || 'api_key';
+                        var apiKey = security.apiKey || '';
+                        if (apiKey && apiKey.trim() != "") {
+                            var apiKeyAuth = new SwaggerClient.ApiKeyAuthorization(apiKeyName, apiKey, apiKeyVehicle);
+                            window.swaggerUi.api.clientAuthorizations.add(apiKeyName, apiKeyAuth);
+                            log("added key " + apiKey);
+                        }
+                    }
+
+                    function log() {
+                        if ('console' in window) {
+                            console.log.apply(console, arguments);
+                        }
+                    }
+
+                    function oAuthIsDefined(security) {
+                        return security.clientId
+                                && security.clientSecret
+                                && security.appName
+                                && security.realm;
+                    }
+
+                    function initializeSpringfox() {
+                        var security = {};
+                        window.springfox.securityConfig(function(data) {
+                            security = data;
+                            addApiKeyAuthorization(security);
+                            if (typeof initOAuth == "function" && oAuthIsDefined(security)) {
+                                initOAuth(security);
+                            }
+                        });
+                    }
+                });
+
+                $('#select_baseUrl').change(function() {
+                    window.swaggerUi.headerView.trigger('update-swagger-ui', {
+                        url: $('#select_baseUrl').val()
+                    });
+                });
+            }
+
+
+
+
+            function maybePrefix(location, withRelativePath) {
+                var pat = /^https?:\/\//i;
+                if (pat.test(location)) {
+                    return location;
+                }
+                return withRelativePath + location;
+            }
+
+            function initializeBaseUrl() {
+                var relativeLocation = springfox.restBaseUrl();
+                $('#input_baseUrl').hide();
+                $.getJSON(relativeLocation + "/swagger-resources", function(data) {
+                    var $urlDropdown = $('#select_baseUrl');
+                    $urlDropdown.empty();
+                    $.each(data, function(i, resource) {
+                        var option = $('<option></option>')
+                                .attr("value", maybePrefix(resource.location, relativeLocation))
+                                .text(resource.name + " (" + resource.location + ")");
+                        $urlDropdown.append(option);
+                    });
+                    $urlDropdown.change();
+                });
+
+            }
+
+
+
+
+
+
+        });
+    </script>
 </head>
-<script language="JavaScript">
-    self.location='swagger-ui.html';
-</script>
-<body>
+
+<body class="swagger-section">
+<div id="content" style="display: none">
+    <div id='header'>
+        <div class="swagger-ui-wrap">
+            <a id="logo">采访任务 2.0 API</a>
+            <form id='api_selector'>
+                <div class='input'>
+                    <select id="select_baseUrl" name="select_baseUrl"/>
+                </div>
+                <div class='input'><input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/></div>
+                <div id='auth_container'></div>
+                <div class='input'><a id="explore" class="header__btn" href="#" data-sw-translate>浏览</a></div>
+            </form>
+        </div>
+    </div>
+
+    <div id="message-bar" class="swagger-ui-wrap" data-sw-translate>&nbsp;</div>
+    <div id="swagger-ui-container" class="swagger-ui-wrap"></div>
+</div>
+
+<div id="login">
+    <h1>API接口登录</h1>
+    <form name="loginForm" onsubmit="return false;">
+            <div class="group">
+                <input type="text" name="username" placeholder="用户名"/>
+            </div>
+        <div class="group">
+            <input type="password" name="password" placeholder="密码"/>
+        </div>
+        <div class="group">
+            <button class="submit" id="submit">登录</button>
+            <span class="tips"></span>
+        </div>
+    </form>
+</div>
+
 </body>
 </html>
